SERVER-32106 Don't lookup collection from catalog when applying optype 'n' oplog entries in secondaries